add larger score for longer sentences

--- a/research/embedings.ipynb
+++ b/research/embedings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -18,6 +18,9 @@
       "\n",
       "Input  (46 chars): Wyrok Sądu Najwyższego z dnia 15 marca 2023 r.\n",
       "Output (46 chars): Wyrok Sądu Najwyższego z dnia 15 marca 2023 r.\n",
+      "\n",
+      "Input  (149 chars): Obwieszczenie Marszałka Sejmu Rzeczypospolitej Polskiej z dnia 11 stycznia 2023 r. w sprawie ogłoszenia jednolitego tekstu ustawy o dodatku osłonowym\n",
+      "Output (73 chars): Marszałka Sejmu Rzeczypospolitej Polskiej dot. ustawy o dodatku osłonowym\n",
       "\n",
       "Input  (76 chars): Wyrok Trybunału Konstytucyjnego z dnia 11 stycznia 2024 r. sygn. akt K 23/23\n",
       "Output (46 chars): Wyrok Trybunału Konstytucyjnego -  akt K 23/23\n",
@@ -122,6 +125,7 @@
     "    \"Ustawa z dnia 9 marca 2023 r. o cudzoziemcach\",\n",
     "    \"Wyrok Sądu Najwyższego z dnia 15 marca 2023 r.\",\n",
     "    # Regular longer titles that should be cleaned\n",
+    "    \"Obwieszczenie Marszałka Sejmu Rzeczypospolitej Polskiej z dnia 11 stycznia 2023 r. w sprawie ogłoszenia jednolitego tekstu ustawy o dodatku osłonowym\",\n",
     "    \"Wyrok Trybunału Konstytucyjnego z dnia 11 stycznia 2024 r. sygn. akt K 23/23\",\n",
     "    \"Rozporządzenie Ministra Zdrowia z dnia 15 lutego 2024 r. w sprawie standardów organizacyjnych (PLH120079)\",\n",
     "    \"Obwieszczenie Marszałka Sejmu Rzeczypospolitej Polskiej z dnia 1 marca 2024 r. w sprawie ogłoszenia jednolitego tekstu ustawy o podatku dochodowym\",\n",
@@ -135,6 +139,26 @@
     "    print(f\"\\nInput  ({len(case)} chars): {case}\")\n",
     "    cleaned = clean_title(case)\n",
     "    print(f\"Output ({len(cleaned)} chars): {cleaned}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dot. Krajowej Tablicy Przeznaczeń Częstotliwości'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_title(\"Rozporządzenie Rady Ministrów z dnia 7 sierpnia 2023 r. zmieniające rozporządzenie w sprawie Krajowej Tablicy Przeznaczeń Częstotliwości\")"
    ]
   },
   {
